# CopilotHackathon

./: .gitignore  CODEOWNERS  README.md  TIPS_AND_TRICKS.md  prompt-drills.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-cmake.sh  install-vcpkg.sh
.github/: ci.yaml
.github/workflows/: codeql.yml
GitHub Copilot Playground/: README.md
Resources/: GHCP Cheatsheet.md  Learning some of GitHub Copilot features.ipynb  README.md
challenges/: hangman_cheatsheet.md  hangman_exercises.md  movies.json
challenges/bdd/: README.md
challenges/chatwebsockets/: chatwebsockets.md
challenges/cryptoanalisis/: crypto.md
challenges/eshop/: automobileParts.json  beers.json  eshop.md
challenges/expensetracker/: README.md
challenges/hangperson/: README.md  hangperson_exercises.md  hangperson_prompts.md  note.md  nouns  verbs  wordet.md
challenges/memorygame/: memorygame.md
completesolution/: dockerfile  nodeserver.js  package.json  test.js
completesolution/bdd/: PROMPTS.md
completesolution/c++/: CMakeLists.txt
completesolution/cpp/: CMakeLists.txt  README.md
completesolution/cpp/test/: CMakeLists.txt  test_sorting_algorithms.cpp
completesolution/dataengineer/: COVID19WorldwideTestingData.ipynb  PROMPTS.md
completesolution/dotnet/: Dockerfile  PROMPTS.md  Program.cs  WeatherForecast.cs
completesolution/hangpersonapp/: pom.xml  prompts.md
completesolution/js_vite_react_game/: package.json  vite.config.js
exercisefiles/: dockerfile  package.json  test.js
exercisefiles/c++/test/: CMakeLists.txt
(+134 files in other folders)
